# wordle

./: Cargo.toml  README.md
extension/: README.md  package.json
extension/src/: manifest.ts
extension/src/entries/contentScript/: renderContent.ts
extension/src/entries/contentScript/primary/: main.ts
extension/src/entries/popup/: index.html  main.ts
src/: lib.rs  main.rs
